# MCP-Chatbot

./: .gitignore  README.md  mcp_chatbot.py  package-lock.json  package.json  pyproject.toml  register_user.py
gmail/: README.md
mcp_servers/: dominos_server.py  gmail_mcp_server.py  google_calendar_server.py  pdf_server.py  pizza_server.py
